packages: Add releases-url keys

--- a/packages/acpid/Cargo.toml
+++ b/packages/acpid/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "http://downloads.sourceforge.net/acpid2"
+
 [[package.metadata.build-package.external-files]]
 url = "http://downloads.sourceforge.net/acpid2/acpid-2.0.32.tar.xz"
 sha512 = "c7afffdf9818504e1ac03b0ad693a05f772bfd07af9808262b3b6bb82ca4dabe6253c94e6dc59e5be6f0da9e815e8bcf2d3e16f02b23d0248b6bad4509e78be7"
