--- a/packages/chrony/Cargo.toml
+++ b/packages/chrony/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://download.tuxfamily.org/chrony"
+
 [[package.metadata.build-package.external-files]]
 url = "https://download.tuxfamily.org/chrony/chrony-4.1.tar.gz"
 sha512 = "5e283d6a56e6852606c681a7c29c5786b102d584178cbd7033ebbc95a8e95533605631363b850a3087cca438a5878db7a317f120aab2fd856487d02fccfbcb1f"
