--- a/packages/iptables/Cargo.toml
+++ b/packages/iptables/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "http://www.netfilter.org/projects/iptables/files"
+
 [[package.metadata.build-package.external-files]]
 url = "http://www.netfilter.org/projects/iptables/files/iptables-1.8.7.tar.bz2"
 sha512 = "c0a33fafbf1139157a9f52860938ebedc282a1394a68dcbd58981159379eb525919f999b25925f2cb4d6b18089bd99a94b00b3e73cff5cb0a0e47bdff174ed75"
