--- a/packages/kexec-tools/Cargo.toml
+++ b/packages/kexec-tools/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://kernel.org/pub/linux/utils/kernel/kexec"
+
 [[package.metadata.build-package.external-files]]
 url = "https://kernel.org/pub/linux/utils/kernel/kexec/kexec-tools-2.0.22.tar.xz"
 sha512 = "7580860f272eee5af52139809f12961e5a5d3a65f4e191183ca9c845410425d25818945ac14ed04a60e6ce474dc2656fc6a14041177b0bf703f450820c7d6aba"
