--- a/packages/libbzip2/Cargo.toml
+++ b/packages/libbzip2/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://sourceware.org/pub/bzip2"
+
 [[package.metadata.build-package.external-files]]
 url = "https://sourceware.org/pub/bzip2/bzip2-1.0.8.tar.gz"
 sha512 = "083f5e675d73f3233c7930ebe20425a533feedeaaa9d8cc86831312a6581cefbe6ed0d08d2fa89be81082f2a5abdabca8b3c080bf97218a1bd59dc118a30b9f3"
