--- a/packages/libnetfilter_queue/Cargo.toml
+++ b/packages/libnetfilter_queue/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://netfilter.org/projects/libnetfilter_queue/files"
+
 [[package.metadata.build-package.external-files]]
 url = "https://netfilter.org/projects/libnetfilter_queue/files/libnetfilter_queue-1.0.5.tar.bz2"
 sha512 = "732a44b602e5efaa4f5582ea25ff8f5ec8f4dca5c0e725cd93fe2d441db80416b25c6018147be90acb262d7428eb5b21b3f7b5920e612d115061ec6a19d67f85"
