--- a/packages/runc/Cargo.toml
+++ b/packages/runc/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/opencontainers/runc/releases/"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/opencontainers/runc/releases/download/v1.0.2/runc.tar.xz"
 path = "runc-v1.0.2.tar.xz"
