--- a/packages/wicked/Cargo.toml
+++ b/packages/wicked/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/openSUSE/wicked/releases"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/openSUSE/wicked/archive/version-0.6.66.tar.gz"
 sha512 = "4898e065a77c3158702b1a32e2317a97821df2bc54a9df52e6b3626e4787602771983717a90eb999d7e4a119e4705bfeeb213de8361877fae2a6cda178c329bd"
