--- a/packages/bash/Cargo.toml
+++ b/packages/bash/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://ftp.gnu.org/gnu/bash"
+
 [[package.metadata.build-package.external-files]]
 url = "https://ftp.gnu.org/gnu/bash/bash-5.0.tar.gz"
 sha512 = "bb4519f06e278f271d08722b531e49d2e842cc3e0b02a6b3eee422e2efcb5b6226111af43f5e5eae56beb85ac8bfebcd6a4aacbabb8f609e529aa4d571890864"
