--- a/packages/containerd/Cargo.toml
+++ b/packages/containerd/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/containerd/containerd/releases"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/containerd/containerd/archive/v1.5.5/containerd-1.5.5.tar.gz"
 sha512 = "8ee5aa1d35e76238fd8707bff6b7eedb7931e6489d49b6907a8e190b076fe6fd95ae5e85ecea1605adb7fcd4f3ae0e926696f1d2f3c0d12b61e6df906929b9eb"
