--- a/packages/docker-init/Cargo.toml
+++ b/packages/docker-init/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/krallin/tini/releases"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/krallin/tini/archive/v0.19.0/tini-0.19.0.tar.gz"
 sha512 = "1fa85b56e2c6085ea474f251928e7a40510d92aeef60b3c145b0496969c1b5df86835d143cb91ef5b4bf4da63fa8a56947cc39a4276e4b72faa57276d432b292"
