--- a/packages/iputils/Cargo.toml
+++ b/packages/iputils/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/iputils/iputils/releases"
+
 [[package.metadata.build-package.external-files]]
 path = "iputils-20210722.tar.gz"
 url = "https://github.com/iputils/iputils/archive/20210722.tar.gz"
