--- a/packages/kubernetes-1.21/Cargo.toml
+++ b/packages/kubernetes-1.21/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2018"
 publish = false
 build = "build.rs"
 
-[package.metadata.build-package]
-package-name = "kubernetes-1.21"
-
 [lib]
 path = "pkg.rs"
+
+[package.metadata.build-package]
+package-name = "kubernetes-1.21"
+releases-url = "https://github.com/kubernetes/kubernetes/releases"
 
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/kubernetes/kubernetes/archive/v1.21.3/kubernetes-1.21.3.tar.gz"
