--- a/packages/libdbus/Cargo.toml
+++ b/packages/libdbus/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://dbus.freedesktop.org/releases/dbus"
+
 [[package.metadata.build-package.external-files]]
 url = "https://dbus.freedesktop.org/releases/dbus/dbus-1.12.20.tar.gz"
 sha512 = "0964683bc6859374cc94e42e1ec0cdb542cca67971c205fcba4352500b6c0891665b0718e7d85eb060c81cb82e3346c313892bc02384da300ddd306c7eef0056"
