--- a/packages/libiw/Cargo.toml
+++ b/packages/libiw/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://hewlettpackard.github.io/wireless-tools/Tools.html"
+
 [[package.metadata.build-package.external-files]]
 url = "https://hewlettpackard.github.io/wireless-tools/wireless_tools.29.tar.gz"
 sha512 = "c169e29d53353e3d65913a5a5ba219752218968b0c036d4bfb25e7f3a9e31fe1e6adfcdbb410116e9c161c99aa3a7314fdc889ba36ba63f002d11ff9dba6974d"
