--- a/packages/libnfnetlink/Cargo.toml
+++ b/packages/libnfnetlink/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "http://netfilter.org/projects/libnfnetlink/files"
+
 [[package.metadata.build-package.external-files]]
 url = "http://netfilter.org/projects/libnfnetlink/files/libnfnetlink-1.0.1.tar.bz2"
 sha512 = "2ec2cd389c04e21c8a02fb3f6d6f326fc33ca9589577f1739c23d883fe2ee9feaa16e83b6ed09063ad886432e49565dc3256277d035260aca5aab17954b46104"
