--- a/packages/libnftnl/Cargo.toml
+++ b/packages/libnftnl/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "http://netfilter.org/projects/libnftnl/files"
+
 [[package.metadata.build-package.external-files]]
 url = "http://netfilter.org/projects/libnftnl/files/libnftnl-1.2.0.tar.bz2"
 sha512 = "2a068e7eab308442bbfba5325f3aebeb874c142b029ff5906cadf63a1f879b20930bc55cd9554c5d256a0642f0f5a6d36177d9ae88cf507ab5dfc7fabffbb380"
