--- a/packages/libnl/Cargo.toml
+++ b/packages/libnl/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/thom311/libnl/releases"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/thom311/libnl/archive/libnl3_5_0.tar.gz"
 sha512 = "2b762419a21b4560f7d488791a9d7aec0d1c6eac0cd2839ceec0bef5562f130ce44b826691276e1301b9e239f684063037959207474cefec4b46efc32039615d"
