--- a/packages/libtirpc/Cargo.toml
+++ b/packages/libtirpc/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://sourceforge.net/projects/libtirpc/files/libtirpc/"
+
 [[package.metadata.build-package.external-files]]
 url = "https://downloads.sourceforge.net/libtirpc/libtirpc-1.3.2.tar.bz2"
 sha512 = "8664d5c4f842ee5acf83b9c1cadb7871f17b8157a7c4500e2236dcfb3a25768cab39f7c5123758dcd7381e30eb028ddfa26a28f458283f2dcea3426c9878c255"
