--- a/packages/ncurses/Cargo.toml
+++ b/packages/ncurses/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://invisible-mirror.net/ncurses/announce.html"
+
 [[package.metadata.build-package.external-files]]
 url = "https://invisible-mirror.net/archives/ncurses/ncurses-6.2.tar.gz"
 sha512 = "4c1333dcc30e858e8a9525d4b9aefb60000cfc727bc4a1062bace06ffc4639ad9f6e54f6bdda0e3a0e5ea14de995f96b52b3327d9ec633608792c99a1e8d840d"
