--- a/packages/systemd/Cargo.toml
+++ b/packages/systemd/Cargo.toml
@@ -8,6 +8,9 @@ build = "build.rs"
 [lib]
 path = "pkg.rs"
 
+[package.metadata.build-package]
+releases-url = "https://github.com/systemd/systemd-stable/releases"
+
 [[package.metadata.build-package.external-files]]
 url = "https://github.com/systemd/systemd-stable/archive/v247.8/systemd-stable-247.8.tar.gz"
 sha512 = "ac6c9e9b1642f14971551585b25b0b69733a76577154baa701d9879349844913535859d1ef440d20b4d55d8bcc7c34b9d413710f3e49e4cc295d1e5ebb48102c"
