--- a/sources/logdog/conf/logdog.aws-ecs-1.conf
+++ b/sources/logdog/conf/logdog.aws-ecs-1.conf
@@ -3,6 +3,7 @@ file docker-daemon.json /etc/docker/daemon.json
 file ecs-agent-state.json /var/lib/ecs/data/ecs_agent_data.json
 file ecs-config.json /etc/ecs/ecs.config.json
 http ecs-tasks http://localhost:51678/v1/tasks
+glob /var/log/ecs/agent-runtime-stats.log*
 glob /var/log/ecs/ecs-cni-bridge-plugin.log*
 glob /var/log/ecs/ecs-cni-eni-plugin.log*
 glob /var/log/ecs/vpc-branch-eni.log*
